# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "mixed_integer_test",
    srcs = ["test/mixed_integer_test.cc"],
    deps = [
        ":optimization_utils",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "constraints",
    deps = [
        ":constraint_factory",
        ":nonlinear_constraint",
    ],
)

cc_library(
    name = "solver_options_io",
    hdrs = ["solver_options_io.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "constraint_factory",
    srcs = [
        "constraint_factory.cc",
    ],
    hdrs = [
        "constraint_factory.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "fast_osqp_solver",
    srcs = [
        "fast_osqp_solver.cc",
        "fast_osqp_solver_common.cc",
    ],
    hdrs = [
        "fast_osqp_solver.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "@osqp",
    ],
)

cc_library(
    name = "nonlinear_constraint",
    srcs = [
        "nonlinear_constraint.cc",
    ],
    hdrs = [
        "nonlinear_constraint.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "nonlinear_cost",
    srcs = [
        "nonlinear_cost.cc",
    ],
    hdrs = [
        "nonlinear_cost.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "optimization_utils",
    srcs = [
        "optimization_utils.cc",
    ],
    hdrs = [
        "optimization_utils.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_test(
    name = "cost_constraint_approximation_test",
    size = "small",
    srcs = ["test/cost_constraint_approximation_test.cc"],
    deps = [
        ":optimization_utils",
        "@drake//common/test_utilities:eigen_matrix_compare",
        "@gtest//:main",
    ],
)
