package(default_visibility = ["//visibility:public"])

cc_library(
    name = "robot_lcm_systems",
    srcs = ["robot_lcm_systems.cc"],
    hdrs = [
        "robot_lcm_systems.h",
    ],
    deps = [
        "//lcmtypes:lcmt_robot",
        "//multibody:utils",
        "//systems/framework:vector",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@lcm",
    ],
)

cc_library(
    name = "plant_visualizer",
    srcs = ["plant_visualizer.cc"],
    hdrs = ["plant_visualizer.h"],
    deps = [
        "//common:find_resource",
        "//systems/framework:vector",
        "//systems/primitives",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "vector_scope",
    srcs = ["vector_scope.cc"],
    hdrs = ["vector_scope.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "system_utils",
    srcs = ["system_utils.cc"],
    hdrs = ["system_utils.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
