# -*- python -*-

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utils",
    srcs = [
        "rigidbody_utils.cc",
    ],
    hdrs = [
        "rigidbody_utils.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "lcm_log_utils",
    srcs = [
        "lcm_log_utils.cc",
    ],
    hdrs = [
        "lcm_log_utils.h",
    ],
    deps = [
         "//systems:robot_lcm_systems",
        "//systems/primitives:vector_aggregator",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "utility_systems",
    srcs = [
        "utility_systems.cc",
    ],
    hdrs = [
        "utility_systems.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "//systems:robot_lcm_systems",
        "//examples/Cassie:cassie_utils",
    ],
)
