# -*- python -*-

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utils",
    srcs = [
        "rigidbody_utils.cc",
    ],
    hdrs = [
        "rigidbody_utils.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated."
)

cc_library(
    name = "lcm_log_utils",
    srcs = [
        "lcm_log_utils.cc",
    ],
    hdrs = [
        "lcm_log_utils.h",
    ],
    deps = [
         "//systems:robot_lcm_systems",
        "//systems/primitives:vector_aggregator",
        "@drake//:drake_shared_library",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated."
)

cc_library(
    name = "contact_toolkit",
    srcs = [
        "contact_toolkit.cc",
    ],
    hdrs = [
        "contact_toolkit.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        ":utils",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated."
)

cc_library(
    name = "multibody_solvers",
    srcs = [
        "multibody_solvers.cc",
    ],
    hdrs = [
        "multibody_solvers.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        ":contact_toolkit",
        ":utils",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated."
)

cc_library(
    name = "utility_systems",
    srcs = [
        "utility_systems.cc",
    ],
    hdrs = [
        "utility_systems.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "//systems:robot_lcm_systems",
        "//examples/Cassie:cassie_utils",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated."
)
