# -*- python -*-
load("@drake//tools/install:install.bzl", "install")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
    "pybind_py_library",
)

py_library(
    name = "process_koopman_lcm_log_py",
    srcs = ["koopman_analysis/process_koopman_lcm_log.py"],
    deps = [
        ":module_py",
        "//bindings/pydairlib/lcm:lcm_trajectory_py",
        "//lcmtypes:lcmtypes_robot_py",
    ],
)

py_binary(
    name = "log_plotter_koopman",
    srcs = ["koopman_analysis/log_plotter_koopman.py"],
    data = [
        "@lcm//:lcm-python",
    ],
    deps = [
        ":module_py",
        "//bindings/pydairlib/common",
        "//bindings/pydairlib/lcm:lcm_trajectory_py",
        "//bindings/pydairlib/multibody:multibody_py",
        "//lcmtypes:lcmtypes_robot_py",
    ],
)

# This determines how `PYTHONPATH` is configured, and how to install the
# bindings.
PACKAGE_INFO = get_pybind_package_info("//bindings")

py_library(
    name = "module_py",
    srcs = [
        "__init__.py",
    ],
    imports = PACKAGE_INFO.py_imports,
    deps = [
    ],
)

PY_LIBRARIES = [
    ":module_py",
    "//bindings/pydairlib/common",
    "//bindings/pydairlib/lcm",
    "//bindings/pydairlib/multibody",
]

# Package roll-up (for Bazel dependencies).
py_library(
    name = "pydairlib",
    visibility = ["//visibility:public"],
    deps = PY_LIBRARIES,
)
